# duckdb-ui-dark-mode

./: .gitignore  CMakeLists.txt  Makefile  README.md  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: ui_dark_mode_extension.cpp
src/include/: dark_mode_css.hpp  ui_dark_mode_extension.hpp
test/sql/: ui_dark_mode.test
